fixed a problem in scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,8 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
+	position: relative;
 }
  
 /* Track */
